[package]
name = "miniflux-ai"
version = "0.1.0"
edition = "2021"
authors = [ "zhu327" ]

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[profile.release]
lto = true
strip = true
codegen-units = 1

[lib]
crate-type = ["cdylib"]

[dependencies]
base64 = "0.21"
worker = { version="0.3.4" }
worker-macros = { version="0.3.4" }
console_error_panic_hook = { version = "0.1.7" }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.3"